--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             <option value="combat">Combat-Heavy</option>
             <option value="roleplay">Roleplay Focus</option>
         </select>
+        <label for="theme">Theme:</label>
+        <select id="theme">
+            <option value="default">Any Setting</option>
+            <option value="underdark">Underdark</option>
+            <option value="pirate">Pirate Seas</option>
+            <option value="feywild">Feywild</option>
+        </select>
         <button onclick="generateNPC()">New NPC</button>
         <button onclick="generateTwist()">Cliffhanger Twist</button>
         <button onclick="generateLoot()">Combat Loot</button>
