Moved footer to bottom of page

--- a/index.html
+++ b/index.html
@@ -8,37 +8,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>DM's Chaos Engine</h1>
-    <div class="controls">
-        <label for="tone">Tone:</label>
-        <select id="tone">
-            <option value="default">Default</option>
-            <option value="silly">Extra Silly</option>
-            <option value="combat">Combat-Heavy</option>
-            <option value="roleplay">Roleplay Focus</option>
-        </select>
-        <label for="theme">Theme:</label>
-        <select id="theme">
-            <option value="default">Any Setting</option>
-            <option value="underdark">Underdark</option>
-            <option value="pirate">Pirate Seas</option>
-            <option value="feywild">Feywild</option>
-        </select>
-        <button onclick="generateNPC()">New NPC</button>
-        <button onclick="generateTwist()">Cliffhanger Twist</button>
-        <button onclick="generateLoot()">Combat Loot</button>
-        <button onclick="generateEncounter()">Quick Encounter</button>
-        <button onclick="saveResult()">Save Result</button>
-    </div>
-    <div class="dice">
-        <button onclick="rollDice(20)">Roll d20</button>
-        <span id="dice-result"></span>
-    </div>
-    <div id="output" class="output-box"></div>
-    <div id="history" class="history-box">
-        <h2>Saved Ideas</h2>
-        <ul id="history-list"></ul>
-    </div>
+    <main>
+        <h1>DM's Chaos Engine</h1>
+        <div class="controls">
+            <label for="tone">Tone:</label>
+            <select id="tone">
+                <option value="default">Default</option>
+                <option value="silly">Extra Silly</option>
+                <option value="combat">Combat-Heavy</option>
+                <option value="roleplay">Roleplay Focus</option>
+            </select>
+            <label for="theme">Theme:</label>
+            <select id="theme">
+                <option value="default">Any Setting</option>
+                <option value="underdark">Underdark</option>
+                <option value="pirate">Pirate Seas</option>
+                <option value="feywild">Feywild</option>
+            </select>
+            <button onclick="generateNPC()">New NPC</button>
+            <button onclick="generateTwist()">Cliffhanger Twist</button>
+            <button onclick="generateLoot()">Combat Loot</button>
+            <button onclick="generateEncounter()">Quick Encounter</button>
+            <button onclick="saveResult()">Save Result</button>
+        </div>
+        <div class="dice">
+            <button onclick="rollDice(20)">Roll d20</button>
+            <span id="dice-result"></span>
+        </div>
+        <div id="output" class="output-box"></div>
+        <div id="history" class="history-box">
+            <h2>Saved Ideas</h2>
+            <ul id="history-list"></ul>
+        </div>
+    </main>
+    <footer>Crafted for Jay :D</footer>
     <script src="script.js"></script>
 </body>
 </html>
