Added exportable combat log

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
             </div>
             <button onclick="runCombatSim()">Simulate Fight</button>
             <div id="combat-log" class="output-box"></div>
+            <button onclick="downloadLog()">Download Log</button>
         </div>
     </main>
-    <footer>Crafted for Jay :D</footer>
+    <footer>Crafted for Jay with ❤️ by Josh</footer>
     <script src="script.js"></script>
 </body>
 </html>
