Added exportable log and visual combat tracker

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
                 <textarea id="enemy-input" placeholder="Enemies (e.g., Goblin: 10 HP, 12 AC, +3, 1d4+1)"></textarea>
             </div>
             <button onclick="runCombatSim()">Simulate Fight</button>
+            <div id="combat-tracker"></div>
             <div id="combat-log" class="output-box"></div>
             <button onclick="downloadLog()">Download Log</button>
         </div>
     </main>
-    <footer>Crafted for Jay with ❤️ by Josh</footer>
+    <footer>Crafted for Jay :D </footer>
     <script src="script.js"></script>
 </body>
 </html>
